# SASRec.pytorch

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  README.md  README.zh-CN.md
docs/: MHC_README.md  README.md  README.zh-CN.md  mHC_manifold_constrained_hyper_connections.md
docs/advanced/: distributed-training.md  distributed-training.zh-CN.md  mhc-guide.md  mhc-guide.zh-CN.md
docs/concepts/: background.md  background.zh-CN.md
docs/learning-paths/: 01-data-model-design.md  02-model-implementation.md  03-testing-evaluation.md  04-documentation-presentation.md
docs/references/: changelog.md
docs/reports/: 01_数据与实验设计报告.ipynb  02_模型架构与实现报告.ipynb  03_训练与评估报告.ipynb  04_总结与展望报告.ipynb  README_reports.txt  generate_notebooks.py
docs/reports/data/: sample_data.txt
python/: .gitignore  BACKGROUND_KNOWLEDGE.md  DISTRIBUTED_TRAINING.md  convert_ml1m.py  dataset_hf.py  main.py  main_distributed.py  main_tisasrec.py  model.py  model_mhc.py  pyproject.toml  run_experiments_v2.py  test_batch_size.py  test_distributed.py  test_dropout_issue.py  test_model_forward.py  test_torchrun_env.py  train_distributed.sh  train_highmem.sh  utils.py
