[project]
name = "sasrec"
version = "0.1.0"
description = "SASRec.pytorch - Self-Attentive Sequential Recommendation"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.6.0",
    "numpy>=1.19.0",
    "datasets>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
